--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Nuevo.cshtml
@@ -8,6 +8,45 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+
+<script type="text/javascript">
+
+    $(function () {
+        CargarBodega();
+        $("#IdSucursal").change(function () {
+            CargarBodega();
+        });
+    });
+
+    function CargarBodega() {
+        $("#IdBodega").empty();
+
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val()
+        }
+
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("CargarBodega", "Consignacion", new { Area = "Inventario" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdBodega").append("<option value=" + row.IdBodega + ">" + row.bo_Descripcion + "</option>");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    };
+
+</script>
+
 @using (Html.BeginForm("Nuevo", "Consignacion", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
