--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Modificar.cshtml
@@ -78,7 +78,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="GetHtml">Observación*</label>
+                    <label for="GetHtml">Observación</label>
                     @Html.TextAreaFor(q => q.Observacion, new { @class = "form-control", @rows = 3 })
                     @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
                 </div>
