--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Nuevo.cshtml
@@ -49,10 +49,8 @@
 
 @using (Html.BeginForm("Nuevo", "Consignacion", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa"})
     @Html.HiddenFor(q => q.IdConsignacion)
-    @Html.HiddenFor(q => q.IdSucursal)
-    @Html.HiddenFor(q => q.IdBodega)
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     if (ViewBag.mensaje != null)
