--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Nuevo.cshtml
@@ -132,6 +132,20 @@
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdCambio)
 
+    if (ViewBag.mensaje != null)
+    {
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-12">
+                    <div class="alert alert-warning alert-dismissible">
+                        <h4>
+                            <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
 
     <div class="modal fade" id="ModalFacturas" role="dialog">
         <div class="modal-dialog modal-lg">
