--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/Modificar.cshtml
@@ -72,7 +72,18 @@
             </div>
         </div>
     </div>
-
+    
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label for="pe_cerrado_bool">@Html.CheckBoxFor(q => q.pe_cerrado_bool) Cerrado</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
