--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/_GridViewPartial_importacion_novedades.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/_GridViewPartial_importacion_novedades.cshtml
@@ -65,8 +65,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdNovedad = DataBinder.Eval(tc.DataItem, "IdNovedad") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdNovedad = DataBinder.Eval(tc.DataItem, "IdNovedad") },
+                Html.ActionLink("Modificar", "Modificar", new { IdCarga = DataBinder.Eval(tc.DataItem, "IdCarga") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdCarga = DataBinder.Eval(tc.DataItem, "IdCarga") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -82,18 +82,16 @@
             c.Width = Unit.Pixel(120);
         });
 
-        settings.Columns.Add("IdNovedad", "ID").Width = Unit.Percentage(5);
+        settings.Columns.Add("IdCarga", "ID").Width = Unit.Percentage(5);
         settings.Columns.Add(column =>
         {
-            column.FieldName = "Fecha";
+            column.FieldName = "FechaCarga";
             column.Caption = "Fecha";
             column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "d";
 
         });
 
-        settings.Columns.Add("pe_cedulaRuc", "Cédula").Width = Unit.Percentage(8);
-        settings.Columns.Add("pe_nombreCompleto", "Nombres").Width = Unit.Percentage(22);
         settings.Columns.Add("Descripcion", "Nómina").Width = Unit.Percentage(8);
         settings.Columns.Add("DescripcionProcesoNomina", "Proceso").Width = Unit.Percentage(15);
         settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(10);
