--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/Anular.cshtml
@@ -1,142 +1,201 @@
-﻿@model Core.Erp.Info.RRHH.ro_empleado_novedad_Info
+﻿@model Core.Erp.Info.RRHH.ro_EmpleadoNovedadCargaMasiva_Info
 @{
-    ViewBag.Title = "Anular novedad";
+    ViewBag.Title = "Nueva carga de novedades";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
     }
     Layout = "~/Views/Shared/_Layout.cshtml";
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
-@using (Html.BeginForm("Anular", "EmpleadoNovedad", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Anular", "ImportacionNovedades", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
-    @Html.HiddenFor(q => q.IdEmpresa)
-    @Html.HiddenFor(q => q.IdNovedad)
+    @Html.HiddenFor(q => q.IdCarga)
+
+
     <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="IdProveedor">Empleado</label>
-                    @Html.Partial("_CmbEmpleado_novedades", Model.IdEmpleado)
-                    @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
-                </div>
+        <div class="col-md-4">
+            <div class="form-group">
+                <label for="IdCargo">Sucursal*</label>
+                @Html.DevExpress().ComboBoxFor(q => q.IdSucursal, settings =>
+               {
+                   settings.Name = "IdSucursal";
+                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                   settings.Properties.Columns.Add("IdSucursal", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                   settings.Properties.Columns.Add("Su_descripcion", "Sucursal").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                   //Campo ID
+                   settings.Properties.ValueField = "IdSucursal";
+                   settings.Properties.ValueType = typeof(int);
+                   settings.Properties.TextField = "Sucursal";
+                   //Boton para seleccionar ningun registro
+                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                   settings.Properties.NullText = "== Seleccione ==";
+                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+               }).BindList(ViewBag.lst_sucursal).GetHtml()
+                @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="IdContrato_Tipo">Nómina*</label>
-                    @Html.DropDownListFor(q => q.IdNomina_Tipo, new SelectList(ViewBag.lst_nomina, "IdNomina_Tipo", "Descripcion"), "== Seleccione ==", new { @class = "form-control", @id = "IdNomina_Tipo" })
-                    @Html.ValidationMessageFor(q => q.IdNomina_Tipo, "", new { @class = "text-danger" })
-                </div>
+
+        <div class="col-md-4">
+            <div class="form-group">
+                <label for="IdCargo">Nómina*</label>
+                @Html.DevExpress().ComboBoxFor(q => q.IdNomina, settings =>
+               {
+                   settings.Name = "IdNomina";
+                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                   settings.Properties.Columns.Add("IdNomina_Tipo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                   settings.Properties.Columns.Add("Descripcion", "Nómina").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                   //Campo ID
+                   settings.Properties.ValueField = "IdNomina_Tipo";
+                   settings.Properties.ValueType = typeof(int);
+                   settings.Properties.TextField = "Descripcion";
+                   //Boton para seleccionar ningun registro
+                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                   settings.Properties.NullText = "== Seleccione ==";
+                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+               }).BindList(ViewBag.lst_nomina).GetHtml()
+                @Html.ValidationMessageFor(q => q.IdNomina, "", new { @class = "text-danger" })
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="IdContrato_Tipo">Tipo liquidación de nómina*</label>
-                    @Html.DropDownListFor(q => q.IdNomina_TipoLiqui, new SelectList(ViewBag.lst_nomina_tipo, "IdNomina_TipoLiqui", "DescripcionProcesoNomina"), "== Seleccione ==", new { @class = "form-control", @id = "IdNomina_TipoLiqui" })
-                    @Html.ValidationMessageFor(q => q.IdNomina_TipoLiqui, "", new { @class = "text-danger" })
-                </div>
+
+        <div class="col-md-4">
+            <div class="form-group">
+                <label for="IdCargo">Proceso*</label>
+                @Html.DevExpress().ComboBoxFor(q => q.IdNominaTipo, settings =>
+               {
+                   settings.Name = "IdNominaTipo";
+                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                   settings.Properties.Columns.Add("IdNomina_TipoLiqui", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                   settings.Properties.Columns.Add("DescripcionProcesoNomina", "Proceso").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                   //Campo ID
+                   settings.Properties.ValueField = "IdNomina_TipoLiqui";
+                   settings.Properties.ValueType = typeof(int);
+                   settings.Properties.TextField = "DescripcionProcesoNomina";
+                   //Boton para seleccionar ningun registro
+                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                   settings.Properties.NullText = "== Seleccione ==";
+                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+               }).BindList(ViewBag.lst_nomina_tipo).GetHtml()
+                @Html.ValidationMessageFor(q => q.IdNominaTipo, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-2">
                 <div class="form-group">
-                    <label for="cb_Observacion">Observación</label>
-                    @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="pe_fechaNacimiento">Fecha Novedad*</label>
+                    <label for="Fecha">Fecha Novedad*</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.DevExpress().DateEditFor(q=> q.Fecha, settings =>
+                        @Html.DevExpress().DateEditFor(q=> q.FechaCarga, settings =>
                     {
-                        settings.Name = "Fecha";
+                        settings.Name = "FechaCarga";
                         settings.Properties.UseMaskBehavior = true;
                         settings.Properties.EditFormat = EditFormat.Date;
                         settings.Properties.EditFormatString = "dd/MM/yyyy";
                         settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
                         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                     }).GetHtml()
-                        @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(q => q.FechaCarga, "", new { @class = "text-danger" })
                     </div>
+                </div>
+            </div>
+            <div class="col-md-10">
+                <div class="form-group">
+                    <label for="IdCargo">Rubro*</label>
+                    @Html.DevExpress().ComboBoxFor(q => q.IdRubro, settings =>
+                   {
+                       settings.Name = "IdRubro";
+                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                       settings.Properties.Columns.Add("ru_codRolGen", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                       settings.Properties.Columns.Add("ru_descripcion", "Rubro").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                       //Campo ID
+                       settings.Properties.ValueField = "IdRubro";
+                       settings.Properties.ValueType = typeof(string);
+                       settings.Properties.TextField = "ru_descripcion";
+                       //Boton para seleccionar ningun registro
+                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                       settings.Properties.NullText = "== Seleccione ==";
+                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+                   }).BindList(ViewBag.lst_rubro).GetHtml()
+                    @Html.ValidationMessageFor(q => q.IdRubro, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="cb_Observacion">Detalle de la novedad</label>
-                    @Html.Action("GridViewPartial_empleado_novedad_det", new { IdEmpleado = Model.IdEmpleado, IdNovedad = Model.IdNovedad })
-                    @Html.ValidationMessageFor(q => q.lst_novedad_det, "", new { @class = "text-danger" })
+                    <label for="Fecha">Observación</label>
+                    @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control", disabled = "disabled" })
+                    @Html.ValidationMessageFor(m => m.Observacion, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
     </div>
+
+
+    <div class="row">
+        <div class="col-md-12">
+
+            <div class="col-md-12">
+
+                @Html.DevExpress().UploadControl(settings => {
+                settings.Name = "UploadControlFile";
+                settings.CallbackRouteValues = new { Controller = "ImportacionNovedades", Action = "UploadControlUpload" };
+                settings.ShowUploadButton = true;
+                settings.ShowProgressPanel = true;
+                settings.NullText = "Click here to browse files...";
+                settings.ClientSideEvents.FileUploadComplete = "function(s, e) { GridViewPartial_importacion_novedades_det.PerformCallback({ path: e.callbackData}); }";
+                }).GetHtml()
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="detalle">Detalle de la novedad</label>
+                    @Html.Action("GridViewPartial_importacion_novedades_det")
+                    @Html.ValidationMessageFor(q => q.detalle, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="box-footer">
         <button type="submit" class="btn btn-danger">Anular</button>
-        <a class="btn btn-default" href="@Url.Action("Index","ComprobanteContable",new { Area = "Contabilidad" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","ImportacionNovedades",new { Area = "RRHH" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
 
-<script>
 
-
-       $("#IdNomina_Tipo").change(function () {
-           $("#IdNomina_TipoLiqui").empty();
-             cargar_tipo_liquidacion_nomina();
-
-        });
-
-
-
-
-        function cargar_tipo_liquidacion_nomina() {
-            var datos = {
-                IdNomina: $("#IdNomina_Tipo").val()
-            }
-
-            $.ajax({
-                type: 'POST',
-                data: JSON.stringify(datos),
-                url: '@Url.Action("get_lst_nomina_tipo_liq", "NominaTipoLiquidacion", new { Area = "RRHH" })',
-                async: false,
-                bDeferRender: true,
-                bProcessing: true,
-                dataType: 'json',
-                contentType: 'application/json; charset=utf-8',
-                success: function (data) {
-
-                    $.each(data, function (i, row) {
-                        $("#IdNomina_TipoLiqui").append("<option value=" + row.IdNomina_TipoLiqui + ">" + row.DescripcionProcesoNomina + "</option>");
-                    });
-                },
-                error: function (error) {
-                }
-            });
-        };
-</script>
